fixes trying to get alpha to compile...still getting compile errors w/ reporting code
git-svn-id: http://svn.openmrs.org/branches/alpha@861 5bac5841-c719-aa4e-b3fe-cce5062f897a